package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Ursula Shaw
 */

import javafx.event.ActionEvent;
import javafx.fxml.FXML;

import javax.swing.*;

public class ToDoListController {

    public void addList(ActionEvent actionEvent) {
    }

    public void showAll(ActionEvent actionEvent) {
    }

    public void showUncompleted(ActionEvent actionEvent) {
    }

    public void showCompleted(ActionEvent actionEvent) {
    }

    public void saveAllLists(ActionEvent actionEvent) {
    }

    public void saveList(ActionEvent actionEvent) {
    }

    public void addItem(ActionEvent actionEvent) {
    }
}
