@startuml
'https://plantuml.com/sequence-diagram

class ToDoList {
    main()
    start()
}

class ToDoListController {


    addList()
    removeList()
    renameList()

    addItem()
    removeItem()
    editItemDesc()
    editDueDate()
    markCompleted()
    showAll()
    showCompleted()
    showUncompleted()

    saveList(list object)
    saveAllLists()

}

class List {
    title: String

}

class Item {
    description: String
    dueDate: Date

}

ToDoList -- ToDoListController
List *-- Item




@enduml